[tool.poetry]
name = "chat-completions-utils"
version = "0.1.0"
description = ""
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_completions_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.3.3"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
